--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,16 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
+    "dompurify": "^2.3.3",
+    "highlight.js": "^10.7.3",
+    "markdown-it": "^12.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
