--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "proxy": "http://127.0.0.1:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,12 +14,14 @@
     "dompurify": "^2.3.3",
     "highlight.js": "^10.7.3",
     "markdown-it": "^12.2.0",
+    "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.4.5",
+    "react-toastify": "^7.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
