--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "dompurify": "^2.3.3",
     "highlight.js": "^10.7.3",
     "markdown-it": "^12.2.0",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
