--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,24 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
+    "@codemirror/highlight": "^0.19.6",
+    "@codemirror/lang-java": "^0.19.1",
+    "@codemirror/view": "^0.19.31",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@uiw/react-codemirror": "^4.2.4",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
+    "codemirror": "^5.64.0",
     "dompurify": "^2.3.3",
     "highlight.js": "^10.7.3",
+    "java-parser": "^2.0.0",
     "markdown-it": "^12.2.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.34",
+    "prettier-plugin-java": "^1.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
