--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^2.0.1",
     "joi": "^17.4.2",
     "joi-objectid": "^3.0.1",
     "mongoose": "^6.0.13"
